fix tap color on mobile

--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -5,6 +5,7 @@
   padding: 0
   box-sizing: border-box
   font-family: 'Montserrat'
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0)
 input[type="number"]::-webkit-outer-spin-button,
 input[type="number"]::-webkit-inner-spin-button 
   -webkit-appearance: none
